# binary-search-tree

./: .gitmodules  CMakeLists.txt  Project.cmake
src/: bst.c  bst.h
tests/: bst-create-test.c  bst-insert-test.c  bst-rm-case0-test.c  bst-rm-case1-test.c  bst-rm-case2a-test.c  bst-rm-case2b-test.c  bst-rm-case3-test.c
